ops/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: web
          image: charlieouyang/salsa
          command: ["make", "start-gunicorn"]
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: storage-creds-volume
              mountPath: /credentials
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.16
          command: ["/cloud_sql_proxy",
            "-instances=chinese-goods-277420:us-central1:salsa-production=tcp:5432",
            "-credential_file=/credentials/service_account.json"]
          volumeMounts:
            - name: service-account-token
              mountPath: /credentials
      volumes:
        - name: service-account-token
          secret:
            secretName: service-account-token
        - name: storage-creds-volume
          secret:
            secretName: storage-bucket-credentials
