ops/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/client-max-body-size: "30m"
spec:
  tls:
    - hosts:
        - helistrong.com
        - www.helistrong.com
      secretName: helistrong-com
  rules:
    - host: helistrong.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: ui-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: web-cluster-ip-service
              servicePort: 5000
    - host: www.helistrong.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: ui-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: web-cluster-ip-service
              servicePort: 5000
